# OpenGL-SAR-Remake

./: .cconf.sh  .run.sh  CMakeLists.txt  README.md
assets/shaders/: color.vert  main.frag
dependencies/include/entt/: entt.hpp
dependencies/include/glad/: gl.h
include/engine/core/: Logger.hpp
include/engine/rendering/: RenderWindow.hpp  Shader.hpp  Texture.hpp
include/game/: EntityComponents.hpp  Game.hpp  GameConfig.hpp  GameScene.hpp
include/utils/: PathUtils.hpp  PerlinNoise.hpp
src/: main.cpp
src/engine/core/: Logger.cpp
src/engine/rendering/: RenderWindow.cpp  Shader.cpp  Texture.cpp
src/game/: Game.cpp  GameScene.cpp
src/utils/: PathUtils.cpp  PerlinNoise.cpp
